<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="mrkinfotech.Grocio.ui.home.HomeFragment"
        android:label="@string/home_lable"
        tools:layout="@layout/fragment_first"/>

    <fragment
        android:id="@+id/SearchFragment"
        android:name="mrkinfotech.Grocio.ui.search.SearchFragment"
        android:label="@string/str_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/CartFragment"
        android:name="mrkinfotech.Grocio.ui.cart.CartFragment"
        android:label="@string/str_cart"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/ProfileFragment"
        android:name="mrkinfotech.Grocio.ui.account.ProfileFragment"
        android:label="@string/str_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/LikeFragment"
        android:name="mrkinfotech.Grocio.ui.like.LikeFragment"
        android:label="@string/str_like"
        tools:layout="@layout/fragment_like"/>

    <fragment
        android:id="@+id/AccountFragment"
        android:name="mrkinfotech.Grocio.ui.account.AccountFragment"
        android:label="@string/str_account"
        tools:layout="@layout/fragment_account">

        <action
            android:id="@+id/action_AccountFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />

        <action
            android:id="@+id/action_AccountFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />

        <action
            android:id="@+id/action_AccountFragment_to_OrdersFragment"
            app:destination="@id/OrdersFragment" />
    </fragment>

    <fragment
        android:id="@+id/OrdersFragment"
        android:name="mrkinfotech.Grocio.ui.orders.OrdersFragment"
        android:label="@string/str_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/OrderSummaryFragment"
        android:name="mrkinfotech.Grocio.ui.orders.OrderSummaryFragment"
        android:label="@string/str_order_confirmed_title"
        tools:layout="@layout/fragment_order_summary" />

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="mrkinfotech.Grocio.ui.account.SettingsFragment"
        android:label="@string/str_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/ProductDetailFragment"
        android:name="mrkinfotech.Grocio.ui.product.ProductDetailFragment"
        android:label="@string/str_product_details"
        tools:layout="@layout/fragment_product_detail" />
</navigation>
