<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen_warm"
    android:fillViewport="true"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/screen_horizontal_padding"
        android:paddingTop="@dimen/screen_vertical_padding"
        android:paddingBottom="@dimen/screen_vertical_padding">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/default_image_size_64dp"
            android:layout_height="@dimen/default_image_size_64dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-19dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTitleLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/gentiumbookplus_bold"
            android:text="@string/str_auth_welcome_back"
            android:textColor="@color/color_text_primary"
            android:textSize="@dimen/font_28"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageLogo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTitleIntro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="@font/gentiumbookplus_regular"
            android:text="@string/str_enter_your_credentials"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/font_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitleLogin" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            app:cardBackgroundColor="@color/color_surface"
            app:cardCornerRadius="@dimen/hero_corner_radius"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitleIntro"
            app:strokeColor="@color/color_border"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_20">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTitleEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gentiumbookplus_bold"
                    android:text="@string/str_email"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/font_14" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/auth_field_height"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/bg_input_field"
                    android:fontFamily="@font/gentiumbookplus_regular"
                    android:hint="@string/str_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/padding_16"
                    android:textColor="@color/color_text_primary"
                    android:textColorHint="@color/color_on_surface_muted" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTitlePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:fontFamily="@font/gentiumbookplus_bold"
                    android:text="@string/str_password"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/font_14" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/auth_field_height"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/bg_input_field"
                    android:fontFamily="@font/gentiumbookplus_regular"
                    android:hint="@string/str_enter_your_email_password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/padding_16"
                    android:textColor="@color/color_text_primary"
                    android:textColorHint="@color/color_on_surface_muted" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonLogin"
                    style="@style/CustomButtonStyle"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/str_continue_with_email" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_16"
                    android:fontFamily="@font/gentiumbookplus_regular"
                    android:text="@string/str_or"
                    android:textColor="@color/color_text_secondary"
                    android:textSize="@dimen/font_14" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonContinueWithGoogle"
                    style="@style/GrocioSecondaryButtonStyle"
                    android:layout_marginTop="@dimen/margin_16"
                    android:drawableStart="@drawable/google_icon"
                    android:drawablePadding="@dimen/padding_12"
                    android:gravity="center"
                    android:text="@string/str_continue_with_google" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardLogin">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gentiumbookplus_regular"
                android:text="@string/str_dont_have_account"
                android:textColor="@color/color_text_secondary"
                android:textSize="@dimen/font_14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:fontFamily="@font/gentiumbookplus_bold"
                android:text="@string/str_signup"
                android:textColor="@color/color_primary"
                android:textSize="@dimen/font_14" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
